# mirrored-allocators

./: LICENSE  Makefile.am  README.md  configure.ac  default.nix  libmam.pc.in  shell.nix
include/: mam.h  mirrored-allocators.h
include/mam/: copy-engine.h  mirrored-allocators.h
src/: copy-engine-internal.h  copy-engine.c  mam-internal.h  mirrored-allocators-internal.h  mirrored-allocators.c
test/: copy-engine-test.c  mam-test.c
